--- a/prepros.config
+++ b/prepros.config
@@ -21,7 +21,7 @@
       "scroll": true
     },
     "watcher": {
-      "enable": true,
+      "enable": false,
       "maxFiles": 2000,
       "usePolling": false,
       "pollingInterval": 500,
@@ -960,19 +960,19 @@
       {
         "file": "assets/scripts/app.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
           "autoCompile": true
         }
       },
       {
         "file": "assets/styles/sass/style.scss",
         "config": {
+          "sourceMap": true,
           "customOutput": "assets/styles/style.min.css",
-          "sourceMap": true
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
         }
       },
       {
