--- a/prepros.config
+++ b/prepros.config
@@ -241,6 +241,7 @@
         "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
+        "removeCharset": false,
         "sourceMap": false
       },
       "haml": {
@@ -378,6 +379,7 @@
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
+        "removeCharset": false,
         "sourceComments": false
       },
       "png": {
